# PlateRecognize

./: .gitignore  CMakeLists.txt  README.MD
include/: plate.hpp  plate_info.hpp  plate_sample.hpp
plate/: center_text_mbv3.onnx  config_lite.yml  config_torch.yml  plate_reg_lite.torchscript  plate_reg_res.onnx
src/: blob_data.h  clipper.cpp  detect.cpp  detect.hpp  export_class.cpp  lanms.cpp  lanms.hpp  ort_handler.cpp  ort_handler.hpp  plate.cpp  plate.hpp  recognize.cpp  recognize.hpp  transpose.cpp  transpose.h  utils.cpp  utils.hpp
tools/: demo.cpp
